--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "sweetalert2": "^10.0.2",
+    "sweetalert2-react-content": "^3.2.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
